--- a/media-service/package.json
+++ b/media-service/package.json
@@ -7,6 +7,22 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
+  "dependencies": {
+    "cloudinary": "^2.6.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.2",
+    "multer": "^1.4.5-lts.2",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
