--- a/post-service/.env
+++ b/post-service/.env
@@ -3,3 +3,4 @@ MONGO=mongodb+srv://muhamedadelfahmy99:0oMYnP17XzUgR4SF@cluster0.zvas4vu.mongodb
 JWT_SECRET=dsnvskdnvj23io2o
 NODE_ENV=development
 REDIS_URL=redis://localhost:6379
+RABBITMQ_URL=amqp://localhost:5672
